--- a/game.html
+++ b/game.html
@@ -39,8 +39,8 @@
             </div>
         </div>
         <div class="lower">
-            <span><span>you </span> won the game</span>
-            <button>Play again</button>
+            <span id="spanans" ></span>
+            <button id="play">Play again</button>
         </div>
     </div>
     <script src="./game.js"></script>
